# ai-ethics-law-mini-project

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROCESS.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/submit-solution/: SKILL.md
.claude/skills/submit-solution/scripts/: validate.py
data/payloads/: attacks.json
docs/: analiza_prawna.md  architektura.md  opis_atakow.md
guardrails/: __init__.py  security_shield.py
notebooks/: analiza_wynikow.ipynb
scripts/: __init__.py  attacks_payloads.py  run_attacks.py  run_with_shield.py
src/: __init__.py  example_anthropic.py  example_gemini.py  example_openai.py  ollama_client.py
tests/: test_example_logging.py
wyniki/: raport.md
