[project]
name = "llm-security-sandbox"
version = "0.1.0"
description = "Sandbox do badania podatności lokalnych modeli LLM (Ollama) na Prompt Injection — mini-projekt PWr 2025/2026 (aspekty prawne, etyczne i społeczne AI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Akademicki materiał dydaktyczny — patrz LICENSE" }
authors = [{ name = "Radosław Małek" }]

dependencies = [
    "requests>=2.32",
    "tqdm>=4.66",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
guard = [
    # llm-guard ściąga ciężkie modele transformer; opcjonalne — fallback heurystyczny
    # zapewnia działanie bez tej zależności.
    "llm-guard>=0.3.15",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "guardrails", "src"]
